<resources>
    <string name="app_name">DenzSakura</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_daily">Daily</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_music">Music</string>
    <string name="title_profile">Profile</string>

    <string name="subtitle_profile">Profile</string>
    <string name="subtitle_interest">Interest</string>
    <string name="subtitle_daily_act">Daily Activity</string>
    <string name="subtitle_friends_list">Friends List</string>
    <string name="subtitle_contact">Contact</string>
    <string name="subtitle_find_me">Find Me</string>
    <string name="subtitle_about">About</string>

    <string name="pager_1">Ini Page 1</string>
    <string name="pager_2">Ini Page 2</string>
    <string name="pager_3">Ini Page 3</string>

    <!-- Home and profile-->
    <string name="me_name">Denden Triana</string>
    <string name="me_description">Bergeming/Mengoding</string>
    <string name="me_hobby">Geming</string>
    <string name="sub_hobby">Hobby</string>
    <string name="me_makes">Potato 🥔🥔</string>
    <string name="me_mikes">Mineral Water</string>
    <string name="sub_makes">Fav Food</string>
    <string name="sub_mikes">Fav Drink</string>
    <string name="me_cita">Backend Developer</string>
    <string name="sub_cita">Cita-Cita</string>
    <string name="sub_interested_to">Interested to</string>
    <string name="nodejs_logo">NodeJS Logo</string>
    <string name="reactjs_logo">ReactJS Logo</string>
    <string name="javascript_logo">Javascript Logo</string>
    <string name="twice_logo">Twice Logo</string>
    <string name="izone_logo">IZ*ONE Logo</string>
    <string name="game">Gaming</string>
    <string name="tab_friends">Friends</string>
    <string name="tab_activity">Activity</string>
    <string name="friend_photo">Friend Photo</string>
    <string name="activity_photo">Activity Photo</string>
    <string name="db_refresh_on_dev">DB Refresh on DEV</string>
    <string name="gallery_cat">Gambar Kucing</string>
    <string name="title_video">Video</string>
    <string name="title_media">Media</string>
    <string name="tab_music">Music</string>
    <string name="tab_videos">Videos</string>
    <string name="judul_lagu">JUDUL LAGU</string>
    <string name="artis_lagu">ARTIS LAGU</string>
    <string name="cover_lagu">COVER LAGU</string>
    <string name="profile_contact">Contact</string>
    <string name="profile_number">+62 82216400xxx</string>
    <string name="profile_ig">\@denzsakura</string>
    <string name="profile_email">denzsakura@proton.me</string>
    <string name="find_me">Find Me</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_about">About</string>
    <string name="version">Version :</string>
    <string name="walkthrought">Walkthrought</string>
    <string name="close_button">Close</string>
    <string name="welcome">WELCOME</string>
    <string name="to">TO</string>
    <string name="continue_text">Click the button to continue</string>
    <string name="page_2_nav">Use Bottom Navbar to navigate between menu</string>
    <string name="page_2_tab">Use Tab to navigate between submenu</string>
    <string name="nav_menu">Nav Menu</string>
    <string name="tab_item">Tab Item</string>
    <string name="that_s_it">That\'s it!!</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="click_button_to_close_this_screen">click button to close this screen</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="play_pause">Play Pause</string>
    <string name="refresh_gallery">Refresh Gallery</string>
    <string name="refresh_music">Refresh Music</string>
</resources>