<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_daily"
        android:icon="@drawable/ic_baseline_directions_run_24"
        android:title="@string/title_daily"/>

    <item
        android:id="@id/navigation_gallery"
        android:icon="@drawable/ic_baseline_perm_media_24"
        android:title="@string/title_gallery" />

    <item
        android:id="@id/navigation_music"
        android:icon="@drawable/ic_baseline_music_note_24"
        android:title="@string/title_music" />

    <item
        android:id="@id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile" />

</menu>