<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="16dp"
    app:contentPadding="8dp"
    android:layout_marginTop="8dp"
    style="@style/Theme.DenzSakura.CardView"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/music_img"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:src="@drawable/ic_outline_music_note_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/cover_lagu" />

        <TextView
            android:id="@+id/music_title"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judul_lagu"
            style="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintStart_toEndOf="@+id/music_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/music_artist"
            android:layout_width="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_height="wrap_content"
            android:text="@string/artis_lagu"
            style="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toBottomOf="@+id/music_img"
            app:layout_constraintStart_toEndOf="@+id/music_img"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
