<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment"
    android:padding="16dp"
    android:layout_marginBottom="?attr/actionBarSize"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profile_diri_container"
        style="@style/Theme.DenzSakura.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="24dp"
        app:cardMaxElevation="26dp"
        app:contentPadding="4dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <TextView
                android:id="@+id/profile_profile_diri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_profile"
                style="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_foto_diri"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:padding="1dp"
                android:src="@drawable/ic_foto_diri"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_profile_diri"
                app:shapeAppearance="@style/rounded_pict"
                app:strokeColor="?colorPrimary"
                app:strokeWidth="0.5dp" />

            <TextView
                android:id="@+id/profile_nama_diri"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/me_name"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/profile_foto_diri"
                app:layout_constraintTop_toBottomOf="@id/profile_profile_diri"
                />

            <TextView
                android:id="@+id/home_desk_diri"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me_description"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/profile_foto_diri"
                app:layout_constraintStart_toEndOf="@+id/profile_foto_diri" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="16dp"
        android:id="@+id/profile_contact_container"
        style="@style/Theme.DenzSakura.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="4dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_diri_container"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/profile_contact_title"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_contact_number"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_marginTop="4dp"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_height="wrap_content"
                android:text="@string/profile_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_contact_title"
                app:drawableStartCompat="@drawable/ic_whatsapp_brands"
                android:drawablePadding="4dp"
                />
            <TextView
                android:id="@+id/profile_contact_email"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_marginTop="4dp"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_height="wrap_content"
                android:text="@string/profile_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_contact_number"
                app:drawableStartCompat="@drawable/ic_envelope_solid"
                android:drawablePadding="4dp"
                />
            <TextView
                android:id="@+id/profile_contact_ig"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_marginTop="4dp"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_height="wrap_content"
                android:text="@string/profile_ig"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_contact_email"
                app:drawableStartCompat="@drawable/ic_instagram_brands"
                android:drawablePadding="4dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profile_map_container"
        app:contentPadding="4dp"
        style="@style/Theme.DenzSakura.CardView"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/profile_contact_container"
        tools:layout_editor_absoluteX="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_find_me_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextAppearance.AppCompat.Headline"
                android:text="@string/find_me"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/profile_find_me_linear"
                app:layout_constraintTop_toBottomOf="@id/profile_find_me_title"
                android:orientation="vertical" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_dialog_button"
        style="@style/Theme.DenzSakura.ButtonOutlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_about"
        app:icon="@drawable/ic_baseline_info_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>